Add stats endpoint (#41)
