# docs/openapi.yaml
@@ -9,7 +9,9 @@ paths:
       summary: Get warmane profile data
       description: |
         This is effectively just a passthrough to warmane.com's JSON API. It seems to have
-        pretty strict rate limits on it, so it may not always be reliable.
+        pretty strict rate limits on it, so it may not always be reliable. Generally you should
+        use the `stats` endpoint instead of this one, but the `online` property is interesting and
+        only available here.
       parameters:
         - name: name
           in: query
@@ -31,6 +33,7 @@ paths:
                 properties:
                   online:
                     type: boolean
+                    description: whether the user is currently online or not
                   class:
                     type: string
                     enum:
@@ -138,6 +141,67 @@ paths:
         404:
           description: "character not found"
 
+  /character/stats:
+    get:
+      summary: Get character stats
+      description: |
+        proxies a call to warmane to get character statistics. Note that these statistics follow the character for as long as it exists.
+        In other words, when the season resets the stats do not change. Use this endpoint if you are trying to show off life time arena games played
+      parameters:
+        - name: name
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: realm
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        200:
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  Arenas won:
+                    type: number
+                  Arenas played:
+                    type: number
+                  5v5 matches:
+                    type: number
+                  5v5 victories:
+                    type: number
+                  3v3 matches:
+                    type: number
+                  2v2 matches:
+                    type: number
+                  2v2 victories:
+                    type: number
+                  Circle of Blood matches:
+                    type: number
+                  Dalaran Sewers matches:
+                    type: number
+                  Ring of Trials victories:
+                    type: number
+                  Ring of Valor matches:
+                    type: number
+                  Ruins of Lordaeron matches:
+                    type: number
+                  Ruins of Lordaeron victories:
+                    type: number
+                  Highest 5 man personal rating:
+                    type: number
+                  Highest 3 man personal rating:
+                    type: number
+                  Highest 2 man personal rating:
+                    type: number
+                  Highest 3 man team rating:
+                    type: number
+                  Highest 2 man team rating:
+                    type: number
   /character/crawl-state:
     get:
       summary: Get the crawler state
@@ -176,6 +240,7 @@ paths:
 
   /character/matches:
     get:
+      summary: Get games played
       description:
         Get an object that contains an array of matches. If a continuation token is present,
         this indicates that there are still more results to be fetched.
@@ -252,7 +317,7 @@ paths:
 
   /crawl:
     post:
-      summary: Start Warmane character data crawl
+      summary: Start crawl
       description: Initiates a crawl of Warmane character data based on the user search parameters provided.
       requestBody:
         content:
